@@ -620,6 +620,7 @@ wxMSW:
 - Fix height of initially empty wxBitmapComboBox (Artur Wieczorek).
 - Fix setting label of submenu items (Artur Wieczorek).
 - Fix using Esc as accelerator in the menus.
+- Fix wrong initial status bar height in some cases (Artur Wieczorek).
 
 
 3.0.1: (released 2014-06-15)
